--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     ],
     "require": {
         "php": "^8.1",
+        "awcodes/filament-table-repeater": "^2.0",
         "filament/filament": "^3.0",
         "filament/spatie-laravel-media-library-plugin": "3.0-stable",
         "illuminate/contracts": "^10.0",
