--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
         "php": "^8.1",
         "awcodes/filament-table-repeater": "^2.0",
         "filament/filament": "^3.0",
-        "filament/spatie-laravel-media-library-plugin": "3.0-stable",
+        "filament/spatie-laravel-media-library-plugin": "^3.0",
         "illuminate/contracts": "^10.0",
         "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
