--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "illuminate/contracts": "^10.0|^11.0",
         "maatwebsite/excel": "^3.1",
         "simplesoftwareio/simple-qrcode": "^4.2",
-        "spatie/laravel-medialibrary": "^10.15",
+        "spatie/laravel-medialibrary": "^10.15|^11.4",
         "spatie/laravel-package-tools": "^1.15.0"
     },
     "require-dev": {
